--- a/index.html
+++ b/index.html
@@ -20,21 +20,27 @@
 				<br>
 			<div class="row">
 				<div class="box col-md-4">
-					<div class="nest-1">
-						<h2>Duedate</h2>
-					</div>
+					<a href="null.html">
+						<div class="nest-1">
+							<h2>Duedate</h2>
+						</div>
+					</a>
 				</div>
 				
 				<div class="box col-md-4">
-					<div class="nest-2">
-						<h2>Timetable</h2>
-					</div>	
+					<a href="null.html">	
+						<div class="nest-2">
+							<h2>Timetable</h2>
+						</div>	
+					</a>
 				</div>
 					
-				<div class="box col-md-4">
-					<div class="nest-3">
-						<h2>Resources</h2>
-					</div>
+				<div class="box col-md-4">	
+					<a href="null.html">
+						<div class="nest-3">
+							<h2>Resources</h2>
+						</div>
+					</a>	
 				</div>
 			</div>
 		
